--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
       <div class="pj01">
         <div class="box">
           <div class="pj_header">
+            <div class="logo_img"><img src="img/mercari_logo.png"></div>
             <div class="pjtitle">Digital Goods Marketplace</div>
-            <div class="pjbody">Leading design for the gaming trading platform from the ground up. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
-            <div class="pjsubtitle">Coming soon</div>
+            <div class="pjbody">Leading design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
+            <div class="pjsubtitle"><a href="mercari_gg.html">Read more</a></div>
           </div>
           <div class="left_img"><img src="img/gg_04.svg"></div>
           <div class="right_img"><img src="img/gg_03.svg"></div>
@@ -51,9 +52,10 @@
       <div class="pj04">
         <div class="box">
           <div class="pj_header">
+            <div class="logo_img"><img src="img/mercari_logo.png"></div>
             <div class="pjtitle">Onboarding new seller</div>
             <div class="pjbody">Leading design to help new sellers on Mercari discover items to sell from home.</div>
-            <div class="pjsubtitle">Coming soon</div>
+            <div class="pjsubtitle"><a href="mercari_seller_tool.html">Read more</a></div>
           </div>
           <div class="img_box">
             <div class="left_img"><img src="img/nlo_01.svg"></div>
@@ -66,9 +68,10 @@
       <div class="pj03">
         <div class="box">
           <div class="pj_header">
+            <div class="logo_img"><img src="img/mercari_logo.png"></div>
             <div class="pjtitle">Seller tools</div>
             <div class="pjbody">Leading design to create various seller tools for empowering users to sell their items on the second hand marketplace.</div>
-            <div class="pjsubtitle">Coming soon</div>
+            <div class="pjsubtitle"><a href="mercari_seller_tool.html">Read more</a></div>
           </div>
           <div class="img_box">
             <div class="left_img"><img src="img/sellertool_01.svg"></div>
@@ -81,9 +84,10 @@
       <div class="pj02">
         <div class="box">
           <div class="pj_header">
+            <div class="logo_img"><img src="img/mercari_logo.png"></div>
             <div class="pjtitle">Loyalty Program</div>
             <div class="pjbody">Leading design for creating a seller loyalty program where sellers can get a lower sales fee based on how much they make on Mercari app.</div>
-            <div class="pjsubtitle">Coming soon</div>
+            <div class="pjsubtitle"><a href="mercari_seller_tier.html">Read more</a></div>
           </div>
           <div class="img_box">
             <div class="left_img"><img src="img/referral_01.svg"></div>
