--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="box">
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
-          <div class="pjtitle">Onboarding new seller</div>
+          <div class="pjtitle">Onboarding new sellers</div>
           <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from home.</div>
           <div class="pjsubtitle">Coming soon</div>
         </div>
@@ -74,9 +74,9 @@
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
-          <div class="left_img"><img src="img/sellertool_01.svg"></div>
-          <div class="right_img"><img src="img/sellertool_02.svg"></div>
+          <div class="left_img"><img src="img/sellertool_02.svg"></div>
           <div class="right_img"><img src="img/sellertool_03.svg"></div>
+          <div class="right_img_vid"><video width="308" autoplay muted loop><source src="img/offer_to_likers.mp4" type="video/mp4"></video></div>
         </div>
       </div>
     </div>
@@ -90,17 +90,29 @@
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
-          <div class="left_img"><img src="img/referral_01.svg"></div>
-          <div class="right_img"><img src="img/referral_02.svg"></div>
+          <div class="left_img"><img src="img/referral_02.svg"></div>
           <div class="right_img"><img src="img/referral_03.svg"></div>
+          <div class="right_img_vid"><video width="320" autoplay muted loop><source src="img/seller_tiers.mp4" type="video/mp4"></video></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pj05">
+      <div class="box">
+        <div class="pj_header">
+          <div class="logo_img"><img src="img/origami_logo.png"></div>
+          <div class="pjtitle">Origami Pay</div>
+          <div class="pjbody">Designed the mobile payment system for Origami pay. Origami is a mobile payment platform which was aquired by Mercari in 2020.</div>
+          <div class="pjsubtitle"><a href="https://www.techinasia.com/mercari-acquires-origami">Read about Origami</a></div>
+        </div>
+        <div class="img_box">
+          <div class="left_img"><img src="img/origami_pay.png"></div>
+          <div class="right_img_vid"><video width="308" autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video></div>
         </div>
       </div>
     </div>
     <content>
 
-
 </container>
 
 </body>
-
- 
