--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Loyalty Program</div>
-          <div class="pjbody">Lead design for creating a seller loyalty program where sellers can get a lower sales fee based on how much they make on Mercari app.</div>
+          <div class="pjbody">Lead design for creating a seller loyalty program where sellers can get a lower sales fee based on how much they make on Mercari marketplace.</div>
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
