--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Loyalty Program</div>
-          <div class="pjbody">Lead design for creating a seller loyalty program where sellers can get a lower sales fee based on how much they make on Mercari marketplace.</div>
+          <div class="pjbody">Lead design for creating a seller loyalty program where sellers can get a lower sales fee based on how much they make on Mercari market place.</div>
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
@@ -102,7 +102,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/origami_logo.png"></div>
           <div class="pjtitle">Origami Pay</div>
-          <div class="pjbody">Designed the mobile payment system for Origami pay. Origami is a mobile payment platform which was aquired by Mercari in 2020.</div>
+          <div class="pjbody">Designed the mobile payment system for Origami pay. Origami pay offers seamless payment infrastructure for both merchants and consumers. Origami is a mobile payment platform which was aquired by Mercari in 2020.</div>
           <div class="pjsubtitle"><a href="https://www.techinasia.com/mercari-acquires-origami">Read about Origami</a></div>
         </div>
         <div class="img_box">
