--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Onboarding new sellers</div>
-          <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from home.</div>
+          <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from home. This feature had positive impact on increasing amount of listings per sellers and as a result more people experience their successful selling on Mercari. </div>
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
@@ -70,7 +70,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Seller tools</div>
-          <div class="pjbody">Lead design to create various seller tools for empowering users to sell their items on the second hand marketplace.</div>
+          <div class="pjbody">Lead design to create a seller tool which enables people to make private offers to people who liked their item. This feature is continuing to be used by many sellers and making positive impact on overall sales on Mercari.</div>
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
@@ -86,7 +86,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Loyalty Program</div>
-          <div class="pjbody">Lead design for creating a seller loyalty program where sellers can get a lower sales fee based on how much they make on Mercari market place.</div>
+          <div class="pjbody">Lead design for creating a seller loyalty program where sellers can get a lower sales fee based on how much money they make on Mercari market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
           <div class="pjsubtitle">Coming soon</div>
         </div>
         <div class="img_box">
