--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Digital Goods Marketplace</div>
           <div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
-          <div class="pjsubtitle">Coming soon</div>
+          <div class="pjsubtitle">View workspace</div>
         </div>
         <div class="left_img"><img src="img/gg_04.svg"></div>
         <div class="right_img"><img src="img/gg_03.svg"></div>
@@ -54,8 +54,9 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Onboarding new sellers</div>
-          <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from home. This feature has increased an amount of listings per seller and as a result more people experienced their successful sales on Mercari.</div>
-          <div class="pjsubtitle">Coming soon</div>
+          <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from their homes. This feature has increased an amount of listings per seller and as a result more people experienced their successful sales on Mercari.</div>
+          <div class="pjsubtitle">View workspace</div>
+          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/nlo_01.svg"></div>
@@ -70,8 +71,9 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Seller tools</div>
-          <div class="pjbody">Lead design to create a seller tool which enables you to make private offers to people who liked their item. This feature is continuing to be used by many sellers and making positive impact on overall sales on Mercari.</div>
-          <div class="pjsubtitle">Coming soon</div>
+          <div class="pjbody">Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used features among sellers and continuing to make positive impact on overall sales.</div>
+          <div class="pjsubtitle">View workspace</div>
+          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/sellertool_02.svg"></div>
@@ -86,8 +88,9 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Loyalty Program</div>
-          <div class="pjbody">Lead design for creating a loyalty program where sellers can get a lower sales fee based on amount of money they make on Mercari market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
-          <div class="pjsubtitle">Coming soon</div>
+          <div class="pjbody">Lead design to create a loyalty program where sellers can get a lower sales fee based on amount of money they make on Mercari market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
+          <div class="pjsubtitle">View workspace</div>
+          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/referral_02.svg"></div>
@@ -103,7 +106,8 @@
           <div class="logo_img"><img src="img/origami_logo.png"></div>
           <div class="pjtitle">Origami Pay</div>
           <div class="pjbody">Designed the mobile payment system for Origami pay. It offers seamless payment infrastructure for both merchants and consumers. Origami was acquired by Mercari in 2020.</div>
-          <div class="pjsubtitle"><a href="https://www.techinasia.com/mercari-acquires-origami">Read about Origami</a></div>
+          <div class="pjsubtitle"><a href="https://www.techinasia.com/mercari-acquires-origami">Read article</a></div>
+          <div class="app_img"><a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/origami_pay.png"></div>
