--- a/index.html
+++ b/index.html
@@ -36,27 +36,41 @@
         <strike>Perth</strike>
       </div>
     </div>
-    <div class="pj01">
+    <!--div class="pj01">
       <div class="box">
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
-          <div class="pjtitle">Digital Goods Marketplace</div>
+          <div class="pjtitle">Mercari</div>
           <div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
           <div class="pjsubtitle">View workspace</div>
+          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6w_1gjbJEmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="left_img"><img src="img/gg_04.svg"></div>
         <div class="right_img"><img src="img/gg_03.svg"></div>
+      </div>
+    </div-->
+
+    <div class="pj01">
+      <div class="box_company">
+        <div class="pj_header">
+          <div class="logo_img"><img src="img/mercari_logo.png"></div>
+          <div class="company_name">Mercari</div>
+          <div class="pjbody"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank">Mercari</a> is a company which envisions to connect millions of people across the U.S. to shop and sell almost anything. We all have things we don’t use, never used, or simply outgrew. But these treasured items still have value. Mercari is always trying to find new ways to make exchanging items even easier. <br><br>I initially joined Mercari Japan and transferred to the US team after the company IPO. At Mercari US, I was fortunate to work on many of the major initiatives and features. These include creative design, app design and web design. </div>
+          <!--div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div-->
+        </div>
+        <div class="img_box">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6w_1gjbJEmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
 
     <div class="pj04">
       <div class="box">
         <div class="pj_header">
-          <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="pjtitle">Onboarding new sellers</div>
           <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from their homes. This feature has increased an amount of listings per seller and as a result more people experienced their successful sales on Mercari.</div>
           <div class="pjsubtitle">View workspace</div>
-          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/nlo_01.svg"></div>
@@ -69,11 +83,9 @@
     <div class="pj03">
       <div class="box">
         <div class="pj_header">
-          <div class="logo_img"><img src="img/mercari_logo.png"></div>
-          <div class="pjtitle">Seller tools</div>
+          <div class="pjtitle">Offers</div>
           <div class="pjbody">Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used features among sellers and continuing to make positive impact on overall sales.</div>
           <div class="pjsubtitle">View workspace</div>
-          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/sellertool_02.svg"></div>
@@ -86,11 +98,9 @@
     <div class="pj02">
       <div class="box">
         <div class="pj_header">
-          <div class="logo_img"><img src="img/mercari_logo.png"></div>
-          <div class="pjtitle">Loyalty Program</div>
+          <div class="pjtitle">Loyalty program</div>
           <div class="pjbody">Lead design to create a loyalty program where sellers can get a lower sales fee based on amount of money they make on Mercari market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
           <div class="pjsubtitle">View workspace</div>
-          <div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/referral_02.svg"></div>
@@ -101,15 +111,14 @@
     </div>
 
     <div class="pj05">
-      <div class="box">
+      <div class="box_company">
         <div class="pj_header">
           <div class="logo_img"><img src="img/origami_logo.png"></div>
-          <div class="pjtitle">Origami Pay</div>
-          <div class="pjbody">Designed the mobile payment system for Origami pay. It offers seamless payment infrastructure for both merchants and consumers. Origami was acquired by Mercari in 2020.</div>
-          <div class="pjsubtitle"><a href="https://www.techinasia.com/mercari-acquires-origami">Read article</a></div>
-          <div class="app_img"><a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank"><img src="img/apple_badge.svg"></a></div>
+          <div class="company_name">Origami Pay</div>
+          <div class="pjbody">Designed the mobile payment system for <a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami pay</a>. It offers seamless payment infrastructure for both merchants and consumers. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</div>
         </div>
         <div class="img_box">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/jqwq2bxWYqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br><br><br><br>
           <div class="left_img"><img src="img/origami_pay.png"></div>
           <div class="right_img_vid"><video width="340" autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video></div>
         </div>
