--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/mercari_logo.png"></div>
           <div class="company_name">Mercari</div>
-          <div class="pjbody"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank">Mercari</a> is a company which envisions to connect millions of people across the U.S. to shop and sell almost anything. We all have things we don’t use, never used, or simply outgrew. But these treasured items still have value. Mercari is always trying to find new ways to make exchanging items even easier. <br><br>I initially joined Mercari Japan and transferred to the US team after the company IPO. At Mercari US, I was fortunate to work on many of the major initiatives and features. These include creative design, app design and web design. </div>
+          <div class="pjbody"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank">Mercari</a> is a company which envisions to connect millions of people across the U.S. to shop and sell almost anything. We all have things we don’t use, never used, or simply outgrew. But these treasured items still have value. Mercari is always trying to find new ways to make exchanging items even easier. <br><br>I joined Mercari Japan and transferred to team in the US after the IPO. At Mercari US, I was fortunate to work on many of the major initiatives and projects. These include creative design, app design and web design. </div>
           <!--div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div-->
         </div>
         <div class="img_box">
@@ -69,8 +69,8 @@
       <div class="box">
         <div class="pj_header">
           <div class="pjtitle">Onboarding new sellers</div>
-          <div class="pjbody">Lead design to help new sellers on Mercari discover items to sell from their homes. This feature has increased an amount of listings per seller and as a result more people experienced their successful sales on Mercari.</div>
-          <div class="pjsubtitle">View workspace</div>
+          <div class="pjbody">Selling things is core of Mercari. However, not many of us know what we have at home that sells. I lead design to help new sellers discover items to sell from their homes.</div>
+          <div class="pjsubtitle"><a href="">View workspace</a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/nlo_01.svg"></div>
@@ -83,9 +83,9 @@
     <div class="pj03">
       <div class="box">
         <div class="pj_header">
-          <div class="pjtitle">Offers</div>
-          <div class="pjbody">Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used features among sellers and continuing to make positive impact on overall sales.</div>
-          <div class="pjsubtitle">View workspace</div>
+          <div class="pjtitle">Private offers</div>
+          <div class="pjbody">Lead design to create a seller tool which enables sellers to make private offers to people who liked their item. This is one of the most used feature and continuing to make positive impact on overall sales.</div>
+          <div class="pjsubtitle"><a href="">View workspace</a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/sellertool_02.svg"></div>
@@ -99,14 +99,26 @@
       <div class="box">
         <div class="pj_header">
           <div class="pjtitle">Loyalty program</div>
-          <div class="pjbody">Lead design to create a loyalty program where sellers can get a lower sales fee based on amount of money they make on Mercari market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
-          <div class="pjsubtitle">View workspace</div>
+          <div class="pjbody">Lead design to create a loyalty program where sellers can get a lower sales fee based on their earnings on the market place. By reducing the sales fee, we encouraged sellers to list and sell more allowing for us to regain the lost sales fee and grow our marketplace.</div>
+          <div class="pjsubtitle"><a href="">View workspace</a></div>
         </div>
         <div class="img_box">
           <div class="left_img"><img src="img/referral_02.svg"></div>
           <div class="right_img"><img src="img/referral_03.svg"></div>
           <div class="right_img_vid"><video width="340" autoplay muted loop><source src="img/seller_tiers.mp4" type="video/mp4"></video></div>
         </div>
+      </div>
+    </div>
+
+    <div class="pj06">
+      <div class="box">
+        <div class="pj_header">
+          <div class="pjtitle">Mercari GG</div>
+          <div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
+          <div class="pjsubtitle"><a href="">View workspace</a></div>
+        </div>
+        <div class="left_img"><img src="img/gg_04.svg"></div>
+        <div class="right_img"><img src="img/gg_03.svg"></div>
       </div>
     </div>
 
