--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <!--div class="app_img"><a href="https://apps.apple.com/app/id896130944?mt=8" target="_blank"><img src="img/apple_badge.svg"></a></div-->
         </div>
         <div class="img_box">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/6w_1gjbJEmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="660" height="420" src="https://www.youtube.com/embed/6w_1gjbJEmA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -113,12 +113,12 @@
     <div class="pj06">
       <div class="box">
         <div class="pj_header">
-          <div class="pjtitle">Mercari GG</div>
-          <div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div>
+          <div class="pjtitle">Product page</div>
+          <!--div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div-->
+          <div class="pjbody">Product page is where it drives most of the traffic on Mercari website. I lead to re-design the overall page and help people to have better shopping experience.</div>
           <div class="pjsubtitle"><a href="">View workspace</a></div>
         </div>
-        <div class="left_img"><img src="img/gg_04.svg"></div>
-        <div class="right_img"><img src="img/gg_03.svg"></div>
+        <div class="right_img_vid"><video width="1160" autoplay muted loop><source src="img/item_detail.mp4" type="video/mp4"></video></div>
       </div>
     </div>
 
@@ -127,15 +127,28 @@
         <div class="pj_header">
           <div class="logo_img"><img src="img/origami_logo.png"></div>
           <div class="company_name">Origami Pay</div>
-          <div class="pjbody">Designed the mobile payment system for <a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami pay</a>. It offers seamless payment infrastructure for both merchants and consumers. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</div>
+          <div class="pjbody">Origami offers seamless payment infrastructure for both merchants and consumers. I joined <a href="https://play.google.com/store/apps/details?id=co.origami.android&hl=en&gl=US" target="_blank">Origami</a> at the early phase when there was 10 employees. I was fortunate to be part of their shift from Ecommerce platform to payment service. Origami was <a href="https://www.techinasia.com/mercari-acquires-origami" target="_blank">acquired by Mercari</a> in 2020.</div>
         </div>
         <div class="img_box">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/jqwq2bxWYqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br><br><br><br>
-          <div class="left_img"><img src="img/origami_pay.png"></div>
-          <div class="right_img_vid"><video width="340" autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video></div>
+          <iframe width="660" height="420" src="https://www.youtube.com/embed/jqwq2bxWYqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
+
+    <div class="pj07">
+      <div class="box">
+        <div class="pj_header">
+          <div class="pjtitle">Mobile payment system</div>
+          <!--div class="pjbody">Lead design for the game trading platform. Creating a new marketplace where gamers can leverage Mercari payments and escrow infrastructure to transact virtual gaming goods.</div-->
+          <div class="pjbody">Product page is where it drives most of the traffic on Mercari website. I lead to re-design the overall page and help people to have better shopping experience.</div>
+          <div class="pjsubtitle"><a href="">View workspace</a></div>
+        </div>
+          <div class="left_img"><img src="img/origami_pay.png"></div>
+          <div class="right_img_vid"><video width="340" autoplay muted loop><source src="img/pay.mp4" type="video/mp4"></video></div><br><br><br><br><br>
+      </div>
+    </div>
+
+
     <content>
 
 
